Add builder for BigQuery query runner